# embassy-dev

./: .gitignore
embassy-opentherm/: Cargo.toml
embassy-opentherm/src/: api.rs  lib.rs  pio_opentherm.rs
embassy-usb-logger/: Cargo.toml
examples/rp/: Cargo.toml  build.rs  openocd.gdb
examples/rp/.cargo/: config.toml
examples/stm32f1/: Cargo.toml
examples/stm32f3/: build.rs  memory.x
